maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: only classes can have declared but undefined members
	def keepHandOnRightWall()
            ^Escaper:6: error: Unit does not take parameters
		{
                ^