maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	def keepHandOnRightWall()
	droite()
	avance()
		{
		while(!estSurBiscuit())
		{
		gauche();
		if (estFaceMur)
		{
		droite();
		if (estFaceMur)
		{droite()
		}
				}
		if (!estFaceMur)
		{
			avance();
		}
		}
		}
		keepHandOnRightWall();
	
}
